source/code-samples/fundamentals/fundamentals-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: hello-openshift
  labels:
    name: hello-openshift
spec:
  containers:
  - name: hello-openshift
    image: openshift/hello-openshift:v1.0.6
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    terminationMessagePath: "/dev/termination-log"
    imagePullPolicy: IfNotPresent
    capabilities: {}
    securityContext:
      capabilities: {}
      privileged: false
  restartPolicy: Always
  dnsPolicy: ClusterFirst
  serviceAccount: ''
