source/code-samples/fundamentals/fundamentals-service-pods.yaml
kind: List
apiVersion: v1
items:
- kind: Pod
  apiVersion: v1
  metadata:
    name: hello-openshift-1
    creationTimestamp: 
    labels:
      name: hello-openshift
  spec:
    containers:
    - name: hello-openshift
      image: openshift/hello-openshift:v1.0.6
      ports:
      - containerPort: 8080
        protocol: TCP
      resources:
        limits:
          cpu: 10m
          memory: 16Mi
      terminationMessagePath: "/dev/termination-log"
      imagePullPolicy: IfNotPresent
      capabilities: {}
      securityContext:
        capabilities: {}
        privileged: false
    restartPolicy: Always
    dnsPolicy: ClusterFirst
    serviceAccount: ''
  status: {}
- kind: Pod
  apiVersion: v1
  metadata:
    name: hello-openshift-2
    creationTimestamp: 
    labels:
      name: hello-openshift
  spec:
    containers:
    - name: hello-openshift
      image: openshift/hello-openshift:v1.0.6
      ports:
      - containerPort: 8080
        protocol: TCP
      resources:
        limits:
          cpu: 10m
          memory: 16Mi
      terminationMessagePath: "/dev/termination-log"
      imagePullPolicy: IfNotPresent
      capabilities: {}
      securityContext:
        capabilities: {}
        privileged: false
    restartPolicy: Always
    dnsPolicy: ClusterFirst
    serviceAccount: ''
  status: {}
- kind: Pod
  apiVersion: v1
  metadata:
    name: hello-openshift-3
    creationTimestamp: 
    labels:
      name: hello-openshift
  spec:
    containers:
    - name: hello-openshift
      image: openshift/hello-openshift:v1.0.6
      ports:
      - containerPort: 8080
        protocol: TCP
      resources:
        limits:
          cpu: 10m
          memory: 16Mi
      terminationMessagePath: "/dev/termination-log"
      imagePullPolicy: IfNotPresent
      capabilities: {}
      securityContext:
        capabilities: {}
        privileged: false
    restartPolicy: Always
    dnsPolicy: ClusterFirst
    serviceAccount: ''
  status: {}
