source/code-samples/fundamentals/fundamentals-route.yaml
kind: Route
apiVersion: v1
metadata:
  name: hello-route
  labels:
    name: hello-openshift
spec:
  to:
    name: hello-service
  tls:
    termination: edge
